--- a/config/assets/sass/article/_closing_call.scss
+++ b/config/assets/sass/article/_closing_call.scss
@@ -4,13 +4,13 @@ article {
 
         $img_div_size : 440px;
 
-        min-height    : $img_div_size / 1.3;
-        padding-right : $img_div_size * 1.1;
+        min-height    : calc( $img_div_size / 1.3 );
+        padding-right : calc( $img_div_size * 1.1 );
         padding-bottom: 3rem;
         position      : relative;
 
         @media (max-width: 980px) {
-            min-height    : $img_div_size * 1.3;
+            min-height    : calc( $img_div_size * 1.3 );
             padding-right : 0;
         }
 
@@ -31,20 +31,20 @@ article {
             bottom  : 0;
 
             width                  : $img_div_size;
-            max-height             : $img_div_size / 1.3;
+            max-height             : calc( $img_div_size / 1.3 );
             border-top-left-radius : $img_div_size;
             border-top-right-radius: $img_div_size;
         }
 
         div.orb_left {
-            $div_size : $img_div_size / 4;
+            $div_size : calc( $img_div_size / 4 );
 
             position: absolute;
             z-index : 0;
-            right   : $img_div_size - $div_size * 0.125;
+            right   : calc( $img_div_size - $div_size * 0.125 );
             bottom  : 0;
 
-            width                  : $div_size / 2;
+            width                  : calc( $div_size / 2 );
             height                 : $div_size;
             border-top-left-radius : $div_size;
             border-bottom-left-radius: $div_size;
@@ -58,7 +58,7 @@ article {
         }
 
         div.orb_right {
-            $div_size : $img_div_size / 4;
+            $div_size : calc( $img_div_size / 4 );
 
             position: absolute;
             z-index : 0;
@@ -66,10 +66,10 @@ article {
             bottom  : 0;
 
             $grid_size: 5px;
-            $div_size : $img_div_size / 1.25;
+            $div_size : calc( $img_div_size / 1.25 );
 
             width                  : $div_size;
-            height                 : $div_size / 1.25;
+            height                 : calc( $div_size / 1.25 );
             border-top-left-radius : $div_size;
             border-top-right-radius: $div_size;
 
