--- a/config/assets/sass/article/_counts.scss
+++ b/config/assets/sass/article/_counts.scss
@@ -12,18 +12,18 @@ article {
         );
 
         $hex_size     : 10rem;
-        padding-bottom: $hex_size / 2;
-        margin-bottom : $hex_size / 2 + 4rem;
+        padding-bottom: calc( $hex_size / 2 );
+        margin-bottom : calc( $hex_size / 2 + 4rem );
         margin-top    : 4rem;
 
         div.hexes {
             text-align   : center;
-            margin-bottom: $hex_size * -1 - 0.5rem;
+            margin-bottom: calc( $hex_size * -1 - 0.5rem );
 
             div {
                 display         : inline-block;
                 width           : $hex_size;
-                height          : $hex_size * 1.1;
+                height          : calc( $hex_size * 1.1 );
                 background-image: url( svg/hex.svg );
                 background-size : $hex_size;
                 color           : colors.$dark_text;
