--- a/config/assets/sass/article/_h1_img_side.scss
+++ b/config/assets/sass/article/_h1_img_side.scss
@@ -2,8 +2,8 @@ article {
     div.h1_img_side {
         $img_div_size : 440px;
 
-        min-height    : $img_div_size / 1.3;
-        padding-right : $img_div_size * 1.3;
+        min-height    : calc( $img_div_size / 1.3 );
+        padding-right : calc( $img_div_size * 1.3 );
         position      : relative;
         padding-bottom: 1rem;
 
@@ -33,7 +33,7 @@ article {
             bottom  : 0;
 
             width                  : $img_div_size;
-            max-height             : $img_div_size / 1.3;
+            max-height             : calc( $img_div_size / 1.3 );
             border-top-left-radius : $img_div_size;
             border-top-right-radius: $img_div_size;
         }
@@ -41,14 +41,14 @@ article {
         div.hash {
             position: absolute;
             z-index : 10;
-            right   : $img_div_size / 3;
+            right   : calc( $img_div_size / 3 );
             bottom  : 0;
 
             $grid_size: 5px;
-            $div_size : $img_div_size / 1.25;
+            $div_size : calc( $img_div_size / 1.25 );
 
             width                  : $div_size;
-            height                 : $div_size / 1.25;
+            height                 : calc( $div_size / 1.25 );
             border-top-left-radius : $div_size;
             border-top-right-radius: $div_size;
 
@@ -67,10 +67,10 @@ article {
             right   : 1rem;
             bottom  : 0;
 
-            $div_size : $img_div_size / 4;
+            $div_size : calc( $img_div_size / 4 );
 
             width                  : $div_size;
-            height                 : $div_size / 2;
+            height                 : calc( $div_size / 2 );
             border-top-left-radius : $div_size;
             border-top-right-radius: $div_size;
 
@@ -83,7 +83,7 @@ article {
         }
 
         div.dots {
-            $div_size : $img_div_size / 3;
+            $div_size : calc( $img_div_size / 3 );
 
             position: absolute;
             z-index : 0;
