--- a/templates/components/page_layout.html.tt
+++ b/templates/components/page_layout.html.tt
@@ -1,5 +1,5 @@
 <div id="logo">
-    <img src="[% c.url_for('/logo/favicon-32x32.png') %]">
+    <img src="[% c.url_for('/logo/favicon-32x32.png') %]" width="32" height="32">
     <span class="c">Christian</span>
     <span class="bq">Bible Quizzing</span>
     <a href="#menu" class="toggle-menu"><span class="material-icons">menu</span></a>
