--- a/config/assets/css/page_layout.css
+++ b/config/assets/css/page_layout.css
@@ -51,6 +51,12 @@ footer {
     padding: 1.5rem 2rem;
 }
 
+@media (max-width: 450px) {
+    header {
+        display: none;
+    }
+}
+
 @media (max-width: 690px) {
     header,
     article,
