--- a/config/assets/sass/article/_common.scss
+++ b/config/assets/sass/article/_common.scss
@@ -2,8 +2,9 @@
 
 article {
     h1 {
-        font-size: 2.5rem;
-        color    : colors.$dark_text;
+        font-size  : 2.5rem;
+        color      : colors.$dark_text;
+        text-shadow: 0px 0px 5px white;
     }
     h2 { font-size: 2rem }
     h3 { font-size: 1.75rem }
@@ -22,13 +23,14 @@ article {
 
     & > h1 {
         margin-top: 0;
+        display: flow-root;
     }
 
     img.page_photo {
         border-radius: 1rem;
         float        : right;
         max-width    : 50%;
-        margin       : 0 -2rem 1rem 2rem;
+        margin       : 0rem -2rem 1rem 2rem;
     }
 
     div.gallary {
