--- a/config/assets/sass/article/_white.scss
+++ b/config/assets/sass/article/_white.scss
@@ -3,20 +3,19 @@
 article {
     div.white {
         background-color: colors.$background;
-        padding         : 2rem;
         border-radius   : 1rem;
         text-align      : center;
+        padding: 1rem;
 
-        & > div {
-            vertical-align: top;
-            display       : inline-block;
-            width         : 30%;
-            margin        : 0 1%;
-            max-width     : 30rem;
+        div.flex_container {
+            display        : flex;
+            flex-flow      : row wrap;
+            justify-content: space-evenly;
 
-            @media (max-width: 920px) {
-                display: inline;
-                margin : 0;
+            div.flex_item {
+                flex: 0 1 auto;
+                width : 270px;
+                padding: 1rem;
             }
         }
     }
