Center home page h1 block

--- a/config/assets/sass/article/_h1_img_side.scss
+++ b/config/assets/sass/article/_h1_img_side.scss
@@ -6,6 +6,7 @@ article {
         padding-right : calc( $img_div_size * 1.3 );
         position      : relative;
         padding-bottom: 1rem;
+        text-align    : center;
 
         @media (max-width: 1060px) {
             min-height    : $img_div_size;
