--- a/config/assets/sass/article/_counts.scss
+++ b/config/assets/sass/article/_counts.scss
@@ -35,6 +35,15 @@ article {
                     font-size    : 2rem;
                     font-weight  : 700;
                 }
+
+                img {
+                    height    : 6rem;
+                    margin-top: 2.25rem;
+
+                    &:hover {
+                        filter: drop-shadow( 0px 0px 0.5rem black );
+                    }
+                }
             }
         }
     }
