--- a/config/assets/sass/article/_common.scss
+++ b/config/assets/sass/article/_common.scss
@@ -33,7 +33,7 @@ article {
         margin       : 0rem -2rem 1rem 2rem;
     }
 
-    div.gallary {
+    div.gallery {
         text-align: center;
         border-top: 1px dashed colors.$light_text;
 
