Post-IOC cleanup

--- a/config/assets/sass/article/_h1_img_side.scss
+++ b/config/assets/sass/article/_h1_img_side.scss
@@ -27,6 +27,12 @@ article {
             }
         }
 
+        h1 {
+            font-variant: small-caps;
+            font-size   : 300%;
+            line-height : 1em;
+        }
+
         img {
             position: absolute;
             z-index : 30;
