--- a/templates/components/page_layout.html.tt
+++ b/templates/components/page_layout.html.tt
@@ -7,8 +7,8 @@
     <a href="#menu" class="toggle-menu"><span class="material-icons">menu</span></a>
 </div>
 <header>
-    <a href="[% c.url_for('/international_open_championships.md') %]"
-        class="button colored">Discover More About IOC</a>
+    <a href="[% c.url_for('/rules/CBQ_rule_book.md') %]"
+        class="button colored">Discover More About CBQ</a>
     <a href="[% c.url_for('/slack') %]" class="button">Join Our Slack Forum</a>
 </header>
 <article>
