--- a/templates/components/page_layout.html.tt
+++ b/templates/components/page_layout.html.tt
@@ -1,10 +1,10 @@
 [% page.rss = c.url_for('/iq.rss') %]
 
 <div id="logo">
-    <img src="[% c.url_for('/logo/favicon-32x32.png') %]" width="32" height="32">
+    <img src="[% c.url_for('/logo/source.svg') %]" width="32" height="32">
     <span class="c">Christian</span>
     <span class="bq">Bible Quizzing</span>
-    <a href="#menu" class="toggle-menu"><span class="material-icons">menu</span></a>
+    <a href="#menu" class="toggle-menu"><span class="material-symbols-outlined">menu</span></a>
 </div>
 <header>
     <a href="[% c.url_for('/rules/CBQ_rule_book.md') %]"
@@ -15,7 +15,7 @@
     [% content %]
 </article>
 <nav id="menu">
-    <a href="#" class="toggle-menu"><span class="material-icons">menu</span></a>
+    <a href="#" class="toggle-menu"><span class="material-symbols-outlined">menu</span></a>
     [% BLOCK nav %]
         <ul>
             [% FOREACH node IN docs %]
