--- a/config/assets/sass/_header_footer.scss
+++ b/config/assets/sass/_header_footer.scss
@@ -8,6 +8,40 @@ header {
     }
 }
 
+dialog {
+    margin       : 2em auto 0 auto;
+    padding      : 1em;
+    border       : 1px solid;
+    max-width    : calc( 100vw - 6em );
+    z-index      : 100;
+    border-radius: 0.5em;
+    border-color : colors.$dark_text;
+    color        : colors.$dark_text;
+    filter       : drop-shadow( 0px 0px 0.5rem colors.$dark_text );
+
+    form {
+        margin-top: 0.5em;
+        text-align: right;
+
+        button {
+            margin-left     : 0.5em;
+            background-color: white;
+        }
+    }
+
+    &.error {
+        background-color: #fcc;
+    }
+
+    &.success {
+        background-color: #cfc;
+    }
+
+    &.notice {
+        background-color: #ffc;
+    }
+}
+
 footer {
     font-size: 0.8rem;
     color: colors.$lines;
@@ -21,25 +55,52 @@ footer {
                 filter: drop-shadow( 0px 0px 0.5rem white );
             }
         }
+
+        img.rss {
+            border-radius: 10px;
+            height       : 42px;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        span.icon_links {
+            display     : inline-block;
+            margin-right: 1.5em;
+
+            a {
+                margin-right: 1rem;
+            }
+
+            a:last-child {
+                margin-right: 0;
+            }
+        }
+
+        span.text_links {
+            vertical-align: top;
+
+            a:hover {
+                text-decoration: underline;
+            }
+        }
     }
 
     span.copy {
         float: right;
     }
 
-    @media (max-width: 520px) {
+    @media (max-width: 850px) {
         span.copy {
             display: none;
         }
     }
 
-    a {
-        text-decoration: none;
-        margin-right   : 1rem;
-    }
-
-    a:last-child {
-        margin-right: 0;
+    @media (max-width: 460px) {
+        div.links span.icon_links {
+            display: none;
+        }
     }
 
     a:link {
@@ -51,7 +112,7 @@ footer {
     }
 
     a:hover {
-        color: colors.$lines;
+        color          : colors.$lines;
         text-decoration: underline;
     }
 
