--- a/templates/pages/user/tools.html.tt
+++ b/templates/pages/user/tools.html.tt
@@ -1,3 +1,22 @@
 [% page.title = 'User Tools' %]
 
 <h1>[% page.title %]</h1>
+
+<a class="button colored" href="[% c.url_for('/user/edit') %]">Edit My User Account Data</a>
+
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Last Login</th>
+    </tr>
+    [% FOR this_user IN users %]
+        <tr>
+            <td>[% this_user.first_name %] [% this_user.last_name %]</td>
+            <td><a href="mailto:[% this_user.email %]">[% this_user.email %]</a></td>
+            <td>[% this_user.phone %]</td>
+            <td>[% this_user.last_login %]</td>
+        </tr>
+    [% END %]
+</table>
