Meeting functionality basics

--- a/config/assets/sass/_forms.scss
+++ b/config/assets/sass/_forms.scss
@@ -87,7 +87,7 @@ fieldset {
         background-color: white;
     }
 
-    input {
+    input, textarea {
         border-radius: 0.4em;
         width        : 14em;
     }
